🛠️: update dependencies and remove coordinator Dockerfile and script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,5 @@
 version: "3"
 services:
-  coordinator:
-    build:
-      context: .
-      dockerfile: Coordinator.Dockerfile
-    container_name: coordinator
-    command: ["dart", "sync_coordinator.dart"]
-
   sync0:
     build:
       context: .
@@ -15,6 +8,8 @@ services:
     ports:
       - "8080:8080"
     command: ["dart", "sync_server.dart", "0"]
+    volumes:
+      - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
 
   sync1:
     build:
@@ -24,30 +19,39 @@ services:
     ports:
       - "8081:8080"
     command: ["dart", "sync_server.dart", "1"]
+    volumes:
+      - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
 
-  sync2:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: sync2
-    ports:
-      - "8082:8080"
-    command: ["dart", "sync_server.dart", "2"]
 
-  sync3:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: sync3
-    ports:
-      - "8083:8080"
-    command: ["dart", "sync_server.dart", "3"]
+  # sync2:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: sync2
+  #   ports:
+  #     - "8082:8080"
+  #   command: ["dart", "sync_server.dart", "2"]
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
 
-  sync4:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: sync4
-    ports:
-      - "8084:8080"
-    command: ["dart", "sync_server.dart", "4"]
+  # sync3:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: sync3
+  #   ports:
+  #     - "8083:8080"
+  #   command: ["dart", "sync_server.dart", "3"]
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
+
+  # sync4:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: sync4
+  #   ports:
+  #     - "8084:8080"
+  #   command: ["dart", "sync_server.dart", "4"]
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
