--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
+  logging: ^1.2.0
   shelf: ^1.4.2
   shelf_router: ^1.1.4
 
