🛠️: update analysis options and configure sync services in Docker Compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,36 +22,35 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
 
+  sync2:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: sync2
+    ports:
+      - "8082:8080"
+    command: ["dart", "sync_server.dart", "2"]
+    volumes:
+      - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
 
-  # sync2:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: sync2
-  #   ports:
-  #     - "8082:8080"
-  #   command: ["dart", "sync_server.dart", "2"]
-  #   volumes:
-  #     - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
+  sync3:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: sync3
+    ports:
+      - "8083:8080"
+    command: ["dart", "sync_server.dart", "3"]
+    volumes:
+      - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
 
-  # sync3:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: sync3
-  #   ports:
-  #     - "8083:8080"
-  #   command: ["dart", "sync_server.dart", "3"]
-  #   volumes:
-  #     - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
-
-  # sync4:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   container_name: sync4
-  #   ports:
-  #     - "8084:8080"
-  #   command: ["dart", "sync_server.dart", "4"]
-  #   volumes:
-  #     - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
+  sync4:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: sync4
+    ports:
+      - "8084:8080"
+    command: ["dart", "sync_server.dart", "4"]
+    volumes:
+      - /etc/localtime:/etc/localtime:ro # Herda o relógio do host
